# snake1

./: .gitignore  Containerfile  LICENSE  README.md  Snakefile  config.yaml  guild.yml  pyproject.toml  tech.md
config/: config.yaml  opt.yaml  space.yaml  teams.yaml
envs/: pandas.yaml  reprosyn.yaml  synthesizers.post-deploy.sh  synthesizers.yaml
pages/: data.md  evaluation.md  getting_started.md  overview.md  terms.md
scoring_program/: metadata.yaml  score.py
scripts/: attack_random.py  competition_config.py  prepare_cpsbasic.py  prepare_data.py  prepare_task.py  rank_scores.py  score_task.py  task_prep.py  task_synth.py
snake1/: cli.py  meta.py  prepare.py  score.py  task.py  util.py
snake1/synthesizers/: base.py  constants.py  copulashirley.py  mst.py  pategan.py  privbayes.py
starting_kit/: README.md
synthesizers/: copulashirley.py  mst.py  pategan.py  privbayes.py  utils.py  wrapper.py
