[project]
name = "snake1"
version = "0.1.0"
authors = [
    { name="Louis Béziaud" },
    { name="Tristan Allard" }
]
maintainers = [
    { name="Louis Béziaud" }
]
dependencies = [
    "click==8.1.3",
    "copula_shirley @ git+https://github.com/snake-challenge/copula-shirley.git@29dfb9d#egg=copula_shirley",
    "jax==0.3.23",
    "joblib==1.2.0",
    "networkx==2.8.7",
    "numpy==1.23.4",
    "pandas==1.5.0",
    "private-pgm @ git+https://github.com/snake-challenge/private-pgm.git@5392d37#egg=private-pgm",
    "pyarrow==9.0.0",
    "scipy==1.9.2",
    "synthetic_data_release @ git+https://github.com/snake-challenge/synthetic_data_release.git@4a9ee1b#egg=synthetic_data_release",
]

[project.scripts]
snake1 = "snake1.cli:main"

[tool.setuptools.packages.find]
include = ["snake1"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools", "wheel"]