[project]
name = "snake1"
version = "0.1.0"
authors = [
    { name="Louis Béziaud" },
    { name="Tristan Allard" }
]
maintainers = [
    { name="Louis Béziaud" }
]
dependencies = [
    "click",
    "copula_shirley @ git+https://github.com/snake-challenge/copula-shirley.git#egg=copula_shirley",
    "jax",
    "joblib",
    "networkx",
    "numpy",
    "pandas",
    "private-pgm @ git+https://github.com/snake-challenge/private-pgm.git#egg=private-pgm",
    "pyarrow",
    "scipy",
    "sdmetrics",
    "synthetic_data_release @ git+https://github.com/snake-challenge/synthetic_data_release.git#egg=synthetic_data_release",
]

[project.scripts]
snake1 = "snake1.cli:main"

[tool.setuptools.packages.find]
include = ["snake1"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools", "wheel"]
